--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,16 +1,19 @@
-.card__button__container{
+.card_button_container{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .detail__button{
     padding: 8px 10px 8px 10px;
+    margin-top: 5px;
 }
 
 .card__counter{
-    width: 80px;
+    width: 70px;
+    height: 19px;
     border: 1px solid black;
-    margin: 0px 5px 0px 5px;
     display: flex;
     align-items: center;
     justify-content: center;
